<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Main"
    android:orientation="vertical"
    android:background="#ffffffff">


    <TextView
        android:text="@string/func_obj"
        android:textSize="18sp"
        android:textColor="#ff000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"/>
    <EditText
        android:id="@+id/func_obj"
        android:hint="@string/func_max"
        android:textColorHint="#5f000000"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/restricoes"
        android:textSize="18sp"
        android:textColor="#ff000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"/>
    <EditText
        android:id="@+id/restricoes"
        android:hint="@string/rest_padrao"
        android:textColorHint="#5f000000"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <Button
        android:id="@+id/button_ok"
        android:text="@string/button_ok"
        android:textColor="#ff000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" />


</LinearLayout>
